<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/editProfile_nav"
            android:icon="@drawable/imagen_users"
            android:title="@string/editProfile" />
        <item
            android:id="@+id/about_nav"
            android:icon="@drawable/icon_et"
            android:title="@string/sobreLaApp" />
        <item
            android:id="@+id/nav_tasksDo"
            android:icon="@drawable/icon_et"
            android:title="@string/tareasRealizadas"
            />
    </group>


    <item android:title="Communicate">

            <menu>
                <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/icon_et"
                    android:title="Share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/icon_description_task"
                    android:title="Send" />
                </group>
            </menu>

    </item>


</menu>