<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:padding="20dp">
    
    <ImageView
        android:id="@+id/image_user_nav"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/imagen_users"
        android:contentDescription="@string/una_imagen"
        />

    <TextView
        android:id="@+id/name_user_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_thin"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/bienvenida"
        android:textSize="24sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenida2"
        android:textSize="14sp"/>


</LinearLayout>