<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addTask">

    <EditText
        android:id="@+id/descriptionTask"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/showDesigned"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:autofillHints="@string/designadoEditText"
        android:ems="10"
        android:drawableStart="@drawable/icon_description_task"
        android:hint="@string/add_description"
        android:inputType="textPersonName"
        android:textColor="@color/masClarito"
        android:textColorHint="@color/masClarito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showTime" />

    <EditText
        android:id="@+id/titleTask"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_above="@+id/pickTime"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="15dp"
        android:autofillHints="@string/designadoEditText"
        android:drawableStart="@drawable/icon_title"
        android:ems="10"
        android:hint="@string/add_titulo"
        android:inputType="textPersonName"
        android:textColor="@color/masClarito"
        android:textColorHint="@color/masClarito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addTask"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="26dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/agregar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showDesigned"
        app:layout_constraintVertical_bias="0.348" />

    <Button
        android:id="@+id/pickDesigned"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addTask"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="58dp"
        android:layout_marginBottom="44dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_designado_select"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.329"
        app:layout_constraintStart_toEndOf="@+id/showDesigned"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTask" />

    <Button
        android:id="@+id/pickTime"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/descriptionTask"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/add_hora_select"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toEndOf="@+id/showTime"
        app:layout_constraintTop_toBottomOf="@+id/titleTask" />

    <TextView
        android:id="@+id/showDesigned"
        android:layout_width="156dp"
        android:layout_height="41dp"
        android:layout_above="@+id/addTask"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="40dp"
        android:text="@string/add_desinado"
        android:textColor="@color/masClarito"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTask" />

    <TextView
        android:id="@+id/showTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/showDesigned"
        android:layout_alignParentStart="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="118dp"
        android:text="@string/add_hora"
        android:textColor="@color/masClarito"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTask" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="139dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-3dp"
        android:layout_marginEnd="0dp"
        android:background="#00BCD4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view"
        android:layout_alignBottom="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:text="@string/addTaskTitulo"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>