<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_marginTop="2dp"
    android:background="@drawable/gradient_ligth"
    android:layout_marginStart="5dp"
    android:layout_marginBottom="10dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:background="@drawable/gradient_ligth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/editar_borrar"
            android:layout_width="348dp"
            android:layout_height="165dp"
            android:background="@drawable/gardient_1">

            <ImageView
                android:id="@+id/imagen_eliminar_swipe"
                android:layout_width="80dp"
                android:layout_height="96dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="31dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="31dp"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/delete_icon" />

            <ImageView
                android:id="@+id/imagen_editar_swipe"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="31dp"
                android:layout_marginBottom="31dp"
                android:contentDescription="@string/una_imagen"
                app:srcCompat="@drawable/icon_edit_task" />

            <TextView
                android:id="@+id/editarTextoItem"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="45dp"
                android:layout_marginBottom="66dp"
                android:text="@string/editarTextoItem"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/eliminarTextoItem"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="29dp"
                android:layout_marginTop="71dp"
                android:textStyle="bold"
                android:layout_marginBottom="63dp"
                android:text="@string/eliminarTextoItem"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutABorrar"
            android:layout_width="348dp"
            android:layout_height="165dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/gradient_ligth">



            <TextView
                android:id="@+id/fecha_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/fechaOpcionTareaDialog"
                android:textColor="@color/negro"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/changeColor"
                app:layout_constraintTop_toBottomOf="@+id/descripcion_item2"
                app:layout_constraintVertical_bias="0.157" />

            <TextView
                android:id="@+id/hora_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/horaOpcionTareasDIalog"
                android:textColor="@color/negro"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descripcion_item2"
                android:layout_width="124dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:text="@string/descripciontareasDialog"
                android:textColor="@color/negro"
                app:layout_constraintStart_toEndOf="@+id/changeColor"
                app:layout_constraintTop_toBottomOf="@+id/titulo_item2" />

            <View
                android:id="@+id/changeColor"
                android:layout_width="11dp"
                android:layout_height="170dp"
                android:background="@drawable/border_colors"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titulo_item2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/tituloTareaDialog"
                android:textColor="@color/negro"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/changeColor"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/opcionesItems"
                android:layout_width="51dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/background_icons_tareas"
                android:contentDescription="@string/una_imagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hora_item2"
                app:srcCompat="@drawable/icon_meu_items" />

            <TextView
                android:id="@+id/tiempoDesignadoItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:gravity="center_horizontal"
                android:text="@string/designadOpcionTareasDialog"
                android:textColor="@color/negro"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opcionesItems" />

            <TextView
                android:id="@+id/id_tarea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="11dp"
                app:layout_constraintStart_toEndOf="@+id/changeColor"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/positionView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designadoEditText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>