<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="401dp"
        android:layout_height="440dp"
        android:background="@color/whiteClaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:background="#00BCD4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/menor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="80dp"
            android:background="@color/colorPrimary"
            android:text="@string/botonDesignadoN"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/mayor"
            app:layout_constraintHorizontal_bias="0.955"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showDato" />

        <Button
            android:id="@+id/mayor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="68dp"
            android:background="@color/colorPrimary"
            android:text="@string/botonDesigadoP"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showDato" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="353dp"
            android:layout_height="43dp"
            android:layout_marginTop="32dp"
            android:text="@string/mensajeViewDesignado"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/aceptar"
            android:layout_width="148dp"
            android:layout_height="51dp"
            android:layout_marginTop="60dp"
            android:background="@color/alerter_default_success_background"
            android:text="@string/aceptar"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mayor" />

        <EditText
            android:id="@+id/showDato"
            android:layout_width="87dp"
            android:layout_height="52dp"
            android:layout_marginTop="60dp"
            android:autofillHints="@string/designadoEditText"
            android:backgroundTint="@color/colorAccent"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/designadoEditText"
            android:inputType="textPersonName"
            android:textColorHint="@color/oscurito"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>