<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="322dp"
        android:layout_height="438dp"
        android:background="@color/oscurito"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:background="#00BCD4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/closer_btn"
            android:layout_width="36dp"
            android:layout_height="37dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/una_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon_close" />

        <TextView
            android:id="@+id/tituloTareaOpcionesDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/tituloTareaDialog"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descripcion_opcionTareas"
            android:layout_width="160dp"
            android:layout_height="77dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/descripciontareasDialog"
            android:textColor="@color/whiteClaro"
            app:layout_constraintEnd_toStartOf="@+id/editarOpcionDialog"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <TextView
            android:id="@+id/hora_opcionTareas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/horaOpcionTareasDIalog"
            android:textColor="@color/whiteClaro"
            app:layout_constraintEnd_toStartOf="@+id/delTarea"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/designado_opcionTareas" />

        <TextView
            android:id="@+id/fecha_opcionTareas"
            android:layout_width="155dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fechaOpcionTareaDialog"
            android:textColor="@color/whiteClaro"
            app:layout_constraintEnd_toStartOf="@+id/editarOpcionDialog"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descripcion_opcionTareas" />

        <TextView
            android:id="@+id/designado_opcionTareas"
            android:layout_width="132dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/designadOpcionTareasDialog"
            android:textColor="@color/whiteClaro"
            app:layout_constraintEnd_toStartOf="@+id/delTarea"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fecha_opcionTareas" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="105dp"
            android:layout_height="71dp"
            android:contentDescription="@string/una_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloTareaOpcionesDialog"
            app:srcCompat="@drawable/icon_task" />

        <ImageButton
            android:id="@+id/editarOpcionDialog"
            android:layout_width="87dp"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:background="@color/alerter_default_success_background"
            android:contentDescription="@string/una_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:srcCompat="@drawable/icon_edit_task" />

        <ImageButton
            android:id="@+id/delTarea"
            android:layout_width="87dp"
            android:layout_height="70dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="40dp"
            android:background="@color/alert_default_error_background"
            android:contentDescription="@string/una_imagen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editarOpcionDialog"
            app:layout_constraintVertical_bias="0.042"
            app:srcCompat="@drawable/delete_icon" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>